# eggtools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
eggtools/: AttributeDefs.py  EggExceptions.py  EggMan.py  EggManConfig.py  EggManConfig_old.py  EggUtils.py  LazyEggModder.py
eggtools/attributes/: EggAlphaAttribute.py  EggAttribute.py  EggBackfaceAttribute.py  EggBackstageAttribute.py  EggBillboardAttribute.py  EggBinAttribute.py  EggCollideAttribute.py  EggCollideMaskAttribute.py  EggDCSAttribute.py  EggDartAttribute.py  EggDecalAttribute.py  EggDepthOffsetAttribute.py  EggDepthTestAttribute.py  EggDepthWriteAttribute.py  EggDrawOrderAttribute.py  EggExtFileAttribute.py  EggFPSAttribute.py  EggFlattenTransformAttribute.py  EggFogAttribute.py  EggIndexAttribute.py  EggModelAttribute.py  EggOccluderAttribute.py  EggPointLightAttribute.py  EggSequenceAttribute.py  EggSwitchAttribute.py  EggTagAttribute.py  EggTexListAttribute.py  EggTriangulateAttribute.py  EggUVNameAttribute.py  EggUVScrollAttribute.py  EggVisibilityAttribute.py  _EggTemplateAttribute.py  __init__.py  todo
eggtools/config/: EggVariableConfig.py
eggtools/scripts/: EggAggregator.py  EggPrepper.py  TexturePrefixRefactorTool.py  UVNameRemover.py
eggtools/utils/: EggMaintenanceUtil.py  EggNameResolver.py
examples/: ApplyCustomAttributes.py
tests/: coll_test.egg  name_card.egg  test_attrs.py  test_collide_mask.py  test_custom_egg_attrs.py  test_egg_flatten_transform.py  test_egg_name_resolve.py  test_exceptions.py  test_tiles.egg  xform.egg  xform_out.egg
(+1 files in other folders)
