[tool.poetry]
name = "corporateclash-eggtools"
version = "2.0.0"
description = "Library of utilities catered towards managing Panda3D egg files."

authors = ["The Corporate Clash Crew"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.8,<4.0"
panda3d = "^1.10.14"
